Closed Bug 138280 Opened 22 years ago Closed 22 years ago

Trunk crash [@ nsStorageTransport::nsReadRequest::OnStartRequest]

Categories

(Core :: Networking, defect, P1)

x86
Windows 2000
defect

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: mscott, Assigned: darin.moz)

References

()

Details

(Keywords: crash, topcrash+, Whiteboard: [adt1] [fixed-trunk])

Crash Data

Attachments

(1 file)

Build ID: 2002041603, TRUNK

About 10% of the time, when I'm browsing through the radar detector store off of
http://valentine1.com, I crash. 

The stack trace isn't much to go, but this is what I get:

nsStorageTransport::nsReadRequest::OnStartRequest
[d:\builds\seamonkey\mozilla\netwerk\base\src\nsStorageTransport.cpp, line 604]
XPTC_InvokeByIndex
[d:\builds\seamonkey\mozilla\xpcom\reflect\xptcall\src\md\win32\xptcinvoke.cpp,
line 106]
EventHandler [d:\builds\seamonkey\mozilla\xpcom\proxy\src\nsProxyEvent.cpp, line
567]
PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 597]
PL_ProcessPendingEvents [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c,
line 530]
_md_EventReceiverProc [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line
1078]
nsAppShellService::Run
[d:\builds\seamonkey\mozilla\xpfe\appshell\src\nsAppShellService.cpp, line 309]
main1 [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp, line 1430]
main [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp, line 1765]
WinMain [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp, line 1783]
WinMainCRTStartup() 

Talk back IDs include: 5352830, 5282547
adding crash keyword
Keywords: crash
escalate crasher to neeti.
cc'ing darin
-> me.. this must be a regression from my recent nsStorageTransport change.
Assignee: new-network-bugs → darin
Severity: normal → critical
Priority: -- → P1
Target Milestone: --- → mozilla1.0
Adding topcrash keyword...this crash showed up for the first time with 4/16
MozillaTrunk builds.  There were a few more crashes on 4/17, but I don't see any
incidents with 4/18 builds.  Did this crash go away somehow in a couple of days?
Keywords: topcrash
More Talkback data if you need it:

Rank    StackSignature    Count  

12   nsStorageTransport::nsReadRequest::OnStartRequest   46 

 
 	Source File :
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/netwerk/base/src/nsStorageTransport.cpp
line : 604
 
====================================================================================================
     Count   Offset    Real Signature
[ 9   nsStorageTransport::nsReadRequest::OnStartRequest 1a5d14df -
nsStorageTransport::nsReadRequest::OnStartRequest ]
[ 8   nsStorageTransport::nsReadRequest::OnStartRequest c5ec579d -
nsStorageTransport::nsReadRequest::OnStartRequest ]
[ 5   nsStorageTransport::nsReadRequest::OnStartRequest 5fe8489c -
nsStorageTransport::nsReadRequest::OnStartRequest ]
[ 4   nsStorageTransport::nsReadRequest::OnStartRequest e7d4f127 -
nsStorageTransport::nsReadRequest::OnStartRequest ]
[ 4   nsStorageTransport::nsReadRequest::OnStartRequest 82c55d77 -
nsStorageTransport::nsReadRequest::OnStartRequest ]
[ 3   nsStorageTransport::nsReadRequest::OnStartRequest 06b6baff -
nsStorageTransport::nsReadRequest::OnStartRequest ]
[ 3   nsStorageTransport::nsReadRequest::OnStartRequest 00b1476e -
nsStorageTransport::nsReadRequest::OnStartRequest ]
[ 2   nsStorageTransport::nsReadRequest::OnStartRequest 91094af1 -
nsStorageTransport::nsReadRequest::OnStartRequest ]
[ 2   nsStorageTransport::nsReadRequest::OnStartRequest 7f4cb88f -
nsStorageTransport::nsReadRequest::OnStartRequest ]
[ 2   nsStorageTransport::nsReadRequest::OnStartRequest 76995110 -
nsStorageTransport::nsReadRequest::OnStartRequest ]
[ 2   nsStorageTransport::nsReadRequest::OnStartRequest 0e0d97d3 -
nsStorageTransport::nsReadRequest::OnStartRequest ]
 
     Crash date range: 2002-04-16 to 2002-04-18
     Min/Max Seconds since last crash: 87 - 202406
     Min/Max Runtime: 347 - 202406
     Keyword List : news(4),  
     Count   Platform List 
     24   Windows NT 5.0 build 2195
     8   Windows NT 5.1 build 2600
     5   Windows 98 4.10 build 67766222
     3   Windows 98 4.10 build 67766446
     2   Windows 98 4.90 build 73010104
     2   Windows 95 4.0 build 67109975
 
     Count   Build Id List 
     39   2002041606
     5   2002041721
 
     No of Unique Users        30
 
 Stack trace(Frame) 

	 nsStorageTransport::nsReadRequest::OnStartRequest
[d:\builds\seamonkey\mozilla\netwerk\base\src\nsStorageTransport.cpp  line 604] 
	 XPTC_InvokeByIndex
[d:\builds\seamonkey\mozilla\xpcom\reflect\xptcall\src\md\win32\xptcinvoke.cpp 
line 106] 
	 EventHandler
[d:\builds\seamonkey\mozilla\xpcom\proxy\src\nsProxyEvent.cpp  line 567] 
	 PL_HandleEvent
[d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c  line 597] 
	 PL_ProcessPendingEvents
[d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c  line 530] 
	 _md_EventReceiverProc
[d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c  line 1078] 
	 nsAppShellService::Run
[d:\builds\seamonkey\mozilla\xpfe\appshell\src\nsAppShellService.cpp  line 309] 
	 main1
[d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp  line 1430] 
	 main
[d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp  line 1765] 
	 WinMain
[d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp  line 1783] 
	 WinMainCRTStartup()  
	 KERNEL32.DLL + 0x17d08 (0x77e97d08)   
 
     (5368429)	Comments: opening a new page in the 3rd tab using SSL and lots of tables
     (5352830)	URL: www.valentine1.com
     (5340673)	Comments: This build is considerably less reliable than 4/11/02
     (5337264)	Comments: Not using program it killed itself doing something
     (5337259)	URL: www.commercebank.com
     (5337259)	Comments: standard login series for online banking
     (5328411)	URL:
https://shop.sacher.com/layout/dfltfrma.asp?lan=2&navig=3&inhalt=produkt%5Fdetail%2Easp%3Fpnr%3D2
     (5328411)	Comments: I was at
https://shop.sacher.com/layout/dfltfrma.asp?lan=2&navig=3&inhalt=produkt%5Fdetail%2Easp%3Fpnr%3D2and
then hit the back button to go back
tohttps://shop.sacher.com/layout/dfltfrma.asp?lan=2&navig=3&inhalt=produkt%5Fdetail%2Easp%3Fpnr%3D2
     (5323219)	Comments: sitting doing nothing
     (5313185)	Comments: Reproduction of crash seen in talkback 5312897G.cycling through
news messages with ' n' key on unavailable messages
     (5312897)	Comments: Using 'n' key to advance through messages in a newsgroup where the
server was unable to provide message bodies because of saturated connection ratio.
     (5312503)	URL: http://www.bizfilings.com
     (5312503)	Comments: No trouble for some time and then all of a suddem  boom.
     (5310663)	Comments: Reading Newsgroup
     (5308590)	URL: http://www.phaidon.com
     (5308590)	Comments: just browsing. nothing special.Good luck with RC1  guys
     (5300571)	URL: http://www.ziplip.com/
     (5300571)	Comments: I tried to log in to ZipLip.
     (5293825)	URL: www.tecchannel.de
     (5293825)	Comments: Following a link on the above mentioned site.
     (5293468)	URL: www.hannovermesse.de
     (5293468)	Comments: opening web site
     (5286880)	URL: www.buy-sell-exchange.co.nz
     (5286880)	Comments: After first step of placing an ad  it crashes
     (5286570)	URL: http://my.wpi.edu
     (5286570)	Comments: clicking a link in the BlackBoard(tm)-based MyWPI site
     (5286181)	URL: www.buy-sell-exchange.co.nz and www.travelfree.co.nz
     (5286181)	Comments: I had the above two URLs open in separate windows - just crashed
for no apparent reason.
     (5282547)	URL: www.valentine1.com
     (5269436)	Comments: tried to open a news

Nominating for nsbeta1 since this appears to be a regression.  If it hasn't been
fixed somehow already, this should be looked into.
Keywords: nsbeta1
Summary: frequent crash [@ nsStorageTransport::nsReadRequest::OnStartRequest] → Trunk crash [@ nsStorageTransport::nsReadRequest::OnStartRequest]
my fix for bug 136216 is most likely the culprit here.  i was about to land that
patch on the branch, but now i'm going to hold off until i figure out what's
going on here.
Status: NEW → ASSIGNED
*** Bug 138614 has been marked as a duplicate of this bug. ***
here's an easy way to reproduce from the bug I just duped:
go to https://9bit.net/~scross/crash.html and reloading crashes with this stack
every time
Attached patch v1 patchSplinter Review
turns out to be a really trivial problem.  OnStopRequest needed to be proxied
as well as OnStartRequest.  otherwise, we'd end up firing OnStopRequest and
clearing mListener before the proxied OnStartRequest actually executed.  very
bad!!
with my patch, i can't repro any of the reported crashes... in particular,
https://9bit.net/~scross/crash.html reloads without crashing.
Comment on attachment 80124 [details] [diff] [review]
v1 patch

r=gagan
Attachment #80124 - Flags: review+
Whiteboard: [adt1]
fixed-on-trunk
Whiteboard: [adt1] → [adt1] [fixed-trunk]
*** Bug 138950 has been marked as a duplicate of this bug. ***
can this have caused bug 139143?
benc, could you test this on the trunk and update the bug with your results? 
Does anyone else think this would have caused the bug mentioned in the comment
above this?
R.K.Aa: unlikely.. see my comments in that bug.
fixed-on-branch
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Keywords: fixed1.0.0
Resolution: --- → FIXED
adding adt1.0.0+.
Keywords: adt1.0.0adt1.0.0+
Verifying that this is fixed on the MozillaTrunk.  Talkback data shows this last
crashed on the Trunk with builds from 4/19.  I don't see any crashes in
Mozilla1.0 branch talkback data either, so this one looks ready for verification.
marking verified per jay's comment
Status: RESOLVED → VERIFIED
VERIFIED1.0.0:

The https link seems to be refusing connections, but I've surfed
http://valentine1.com several times, w/o problems.
Crash Signature: [@ nsStorageTransport::nsReadRequest::OnStartRequest]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: