fixes bug 138280 "Trunk crash [@ nsStorageTransport::nsReadRequest::OnStartRequest]" r=gagan sr=rpotts